packages/build/tests/error/fixtures/top/plugin.js
export const onPreBuild = function () {}

const throwError = function () {
  throw new Error('test')
}

throwError()
